# FastVideo

./: .gitignore  .gitmodules  README.md  env_setup.sh  format.sh  generate_synthetic.sh  infenrece_mochi.sh  infenrece_mochi_sp.sh  inference_hunyuan_no_sp.sh  inference_hunyuan_sp.sh  inference_mochi.sh  inference_mochi_no_sp.sh  predict.py  pretty_json.py  pyproject.toml  rec_video.sh  requirements.txt  t2v_debug_multi.sh  t2v_debug_single.sh  try.py
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml
.github/workflows/: codespell.yml  ruff.yml  test.yml  yapf.yml
assets/: mask_strategy.json  prompt.txt
csrc/sliding_tile_attention/: README.md  config.py  setup.py  st_attn.cpp
demo/: gradio_web_demo.py  qualitative_results.md
docs/: Report-v1.2.0.md  distill_hunyuan.md  distillation.md  finetuning.md
fastvideo/: distill.py  distill_adv.py  fsdp_util.py  train.py
fastvideo/data_preprocess/: preprocess_text_embeddings.py  preprocess_vae_latents.py  preprocess_validation_text_embeddings.py
fastvideo/dataset/: __init__.py  latent_datasets.py  t2v_datasets.py  transform.py
fastvideo/demo/: gradio_web_demo.py
fastvideo/distill/: discriminator.py  solver.py
fastvideo/gan/: discriminator.py
fastvideo/model/: mochi_latents_stat.py  mochi_latents_utils.py  mochi_monkey_patches.py  (+4 more)
scripts/: distill_hunyuan.md  distill_hunyuan.sh  download_hf.py  experiment_1.sh  experiment_10.sh  experiment_11.sh  experiment_12.sh  experiment_13.sh  experiment_14.sh  experiment_15.sh  experiment_16.sh  experiment_17-node1.sh  experiment_17-node8.sh  experiment_18-node1.sh  experiment_18-node8.sh  experiment_19-node1.sh  experiment_19-node8.sh  experiment_2.sh  experiment_20-node1.sh  experiment_20-node8.sh  experiment_21-node1.sh  experiment_21-node8.sh  experiment_22-node1.sh  experiment_22-node8.sh  experiment_23-node8.sh  experiment_24-node1.sh  experiment_24-node8.sh  experiment_25-A100.sh  experiment_26-Runlong-H100.sh  experiment_27-A100.sh  experiment_28.sh  experiment_29.sh  experiment_3.sh  experiment_30.sh  experiment_31.sh  experiment_32.sh  experiment_33.sh  experiment_34-A100.sh  experiment_35.sh  experiment_36.sh  (+25 more)
synthetic_generation/: mochi_pipe.py
tests/: test_data_preprocess.py  test_save_checkpoint.py  test_sequence_parallel.py
(+131 files in other folders)
