[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastvideo"
version = "0.0.1"
description = "FastVideo"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    # Core Libraries
    "scipy==1.14.1", "six==1.16.0", "h5py==3.12.1", 
    
    # Machine Learning & Transformers
    "transformers==4.46.1", "tokenizers==0.20.1", "sentencepiece==0.2.0",
    "timm==1.0.11", "peft==0.13.2", "diffusers==0.32.0", "bitsandbytes",
    
    # Acceleration & Optimization
    "accelerate==1.0.1", "torch", 
    
    # Computer Vision & Image Processing
    "opencv-python==4.10.0.84", "pillow==10.2.0", "imageio==2.36.0", 
    "imageio-ffmpeg==0.5.1", "decord==0.6.0", "einops",
    
    # Experiment Tracking & Logging
    "wandb==0.18.5", "loguru", "test-tube==0.7.5",
    
    # Miscellaneous Utilities
    "tqdm==4.66.5", "PyYAML==6.0.1", "idna==3.6", "protobuf==5.28.3",
    "gradio==5.3.0", "huggingface_hub==0.26.1", "moviepy==1.0.3", "flask", "flask_restful", "aiohttp",
    
    # System & Monitoring Tools
    "gpustat", "watch",
    
    # Kernel & Packaging
    "wheel"
]


[tool.setuptools.packages.find]
exclude = ["assets*", "docker*", "docs", "scripts*"]

[tool.wheel]
exclude = ["assets*", "docker*", "docs", "scripts*"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_calls = true
check_untyped_defs = true
no_implicit_optional = true

[tool.codespell]
skip ="./data,./wandb,./csrc/sliding_tile_attention/tk"
[tool.ruff.lint.per-file-ignores]
"fastvideo/models/stepvideo/diffusion/video_pipeline.py" = ["F821"]
"fastvideo/sample/call_remote_server_stepvideo.py" = ["E722"]
"csrc/sliding_tile_attention/test/bench.py" = ["F841"]
"fastvideo/models/stepvideo/__init__.py" = ["F403"]
"fastvideo/models/stepvideo/utils/__init__.py" = ["F403"]
# Ignore all files that end in `_test.py`.
"fastvideo/models/hunyuan/diffusion/pipelines/pipeline_hunyuan_video.py" = ["E741"]


[tool.yapf]
column_limit = 120

[tool.isort]
line_length = 120